# ASP_Reasoner

testing/: main.py  pyproject.toml  results
testing/knowledge_bases_iclp/: base-rank.lp  convert.py  extract.py  knowledge_base_100.lp  knowledge_base_125.lp  knowledge_base_150.lp  knowledge_base_175.lp  knowledge_base_200.lp  knowledge_base_25.lp  knowledge_base_50.lp  knowledge_base_75.lp  run_ranked.sh  statements_100  statements_150  statements_25  statements_50
testing/knowledge_bases_iclp/formated_hagen/: asp_gen_100.cl  asp_gen_150.cl  asp_gen_175.cl  asp_gen_200.cl  asp_gen_25.cl  asp_gen_50.cl  asp_gen_75.cl
testing/knowledge_bases_iclp/ranked_knowledgebases/: convert.py  extract_ranked.py  ranked_100  ranked_100.lp  ranked_125  ranked_125.lp  ranked_150  ranked_150.lp  ranked_175  ranked_175.lp  ranked_200  ranked_200.lp  ranked_25  ranked_25.lp  ranked_50  ranked_50.lp  ranked_75  ranked_75.lp  rational_encoding_2.lp  run_query.sh
testing/knowledge_bases_iclp/ranked_knowledgebases/asp_files/: knowledge_base_100.lp  knowledge_base_125.lp  knowledge_base_150.lp  knowledge_base_175.lp  knowledge_base_200.lp  knowledge_base_225.lp  knowledge_base_25.lp  knowledge_base_250.lp  knowledge_base_275.lp  knowledge_base_300.lp  knowledge_base_325.lp  knowledge_base_350.lp  knowledge_base_375.lp  knowledge_base_400.lp  knowledge_base_425.lp  knowledge_base_450.lp  (+12 more)
testing/knowledge_bases_iclp/results/: bootstrapresults.ipynb  experiments_asp.csv  formatted_results.csv  hagen_experiments.csv  new_results.csv  new_results_1.csv  results.ipynb  trial_results.csv
(+1161 files in other folders)
