[project]
name = "testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pysat>=3.2.2",
    "python-sat>=1.8.dev16",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
